--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "dev": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
